# rectlinear_polygon_operations_visualization

./: .gitignore  CMakeLists.txt
cmake/: cmake_variables.h.in
data/: input.txt  output.txt  polygons1.txt  polygons2.txt  polygons3.txt  rects.txt
include/: App.fwd.h  App.h  PolygonSetHelper.h  Solution.fwd.h  Solution.h  cmake_variables.h  gtl_poly_types.h
src/: App.cpp  App.h  Main.cpp  Solution.cpp
